--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,20 +29,24 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="64dp"
-            app:srcCompat="@drawable/ic_stop"/>
+            app:srcCompat="@drawable/ic_stop"
+            android:backgroundTint="#000000"/>
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_pause"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
             android:layout_margin="64dp"
-            app:srcCompat="@drawable/ic_pause"/>
+            app:srcCompat="@drawable/ic_pause"
+            android:backgroundTint="#000000"/>
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|start"
             android:layout_margin="64dp"
-            app:srcCompat="@drawable/ic_play"/>
+            app:srcCompat="@drawable/ic_play"
+            android:backgroundTint="#000000"
+            />
 
 </android.support.design.widget.CoordinatorLayout>
